fix: create a new class to wrap the main content and so that the width of the footer is not blocked by the page container padding

--- a/client/src/styles/scss/pages/page.scss
+++ b/client/src/styles/scss/pages/page.scss
@@ -2,14 +2,21 @@
 
 // page hero section
 .page-container {
-    padding: 0 48px;
     height: 100%;
     width: 100%;
     overflow-y: scroll;
-    margin: 50px 0px 50px ;
-
+    // margin: 50px 0px 50px;
+    
     display: grid;
     row-gap: 100px;
+    
+    .container {
+        padding: 0 48px;
+
+        display: flex;
+        flex-direction: column;
+        row-gap: 100px;
+    }
 
     .hero-section {
         display: flex;
